update list menu monitoring
update list menu monitoring

--- a/pns-tata-naskah-new-surat-keluar-internal.html
+++ b/pns-tata-naskah-new-surat-keluar-internal.html
@@ -309,6 +309,14 @@
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
+												<span class="menu-title">Penomoran Surat</span>
+											</a>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link" href="#">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
 												<span class="menu-title">Tanda Tangan Surat</span>
 											</a>
 										</div>
