--- a/pns-tata-naskah.html
+++ b/pns-tata-naskah.html
@@ -311,33 +311,6 @@
 												<span class="menu-title">Penomoran Surat</span>
 											</a>
 										</div>
-										<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
-											<span class="menu-link">
-												<span class="menu-bullet">
-													<span class="bullet bullet-dot"></span>
-												</span>
-												<span class="menu-title">Arsip Surat</span>
-												<span class="menu-arrow"></span>
-											</span>
-											<div class="menu-sub menu-sub-accordion">
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
-														</span>
-														<span class="menu-title">Arsip Surat Masuk</span>
-													</a>
-												</div>
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
-														</span>
-														<span class="menu-title">Arsip Surat Keluar</span>
-													</a>
-												</div>
-											</div>
-										</div>
 										<div class="menu-item">
 											<a class="menu-link" href="#">
 												<span class="menu-bullet">
@@ -346,7 +319,6 @@
 												<span class="menu-title">Tanda Tangan Surat</span>
 											</a>
 										</div>
-
 										<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
 											<span class="menu-link">
 												<span class="menu-bullet">
@@ -370,41 +342,6 @@
 															<span class="bullet bullet-dot"></span>
 														</span>
 														<span class="menu-title">Surat Keluar</span>
-													</a>
-												</div>
-											</div>
-										</div>
-										<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
-											<span class="menu-link">
-												<span class="menu-bullet">
-													<span class="bullet bullet-dot"></span>
-												</span>
-												<span class="menu-title">Laporan Surat</span>
-												<span class="menu-arrow"></span>
-											</span>
-											<div class="menu-sub menu-sub-accordion">
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
-														</span>
-														<span class="menu-title">Surat Masuk</span>
-													</a>
-												</div>
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
-														</span>
-														<span class="menu-title">Surat Keluar</span>
-													</a>
-												</div>
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
-														</span>
-														<span class="menu-title">Statistik Surat</span>
 													</a>
 												</div>
 											</div>
@@ -743,7 +680,7 @@
 										<!--begin::Input group-->
 										<div class="row mb-6 align-items-center">
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Perihal Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -753,7 +690,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
+											<div class="col-6 col-xxl-2">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Terima Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -763,7 +700,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Pengirim</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -773,7 +710,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
+											<div class="col-6 col-xxl-2">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Penerimaan</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
