--- a/pns-tata-surat-disposisi-surat-keluar-internal.html
+++ b/pns-tata-surat-disposisi-surat-keluar-internal.html
@@ -311,30 +311,254 @@
 												<span class="menu-title">Tanda Tangan Surat</span>
 											</a>
 										</div>
-										<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
-											<span class="menu-link">
-												<span class="menu-bullet">
-													<span class="bullet bullet-dot"></span>
+										<div class="menu-sub menu-sub-accordion">
+											<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+												<span class="menu-link">
+													<span class="menu-bullet">
+														<span class="bullet bullet-dot"></span>
+													</span>
+													<span class="menu-title">Surat Internal</span>
+													<span class="menu-arrow"></span>
 												</span>
-												<span class="menu-title">Monitoring Surat</span>
-												<span class="menu-arrow"></span>
-											</span>
-											<div class="menu-sub menu-sub-accordion">
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
+												<div class="menu-sub menu-sub-accordion">
+													<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+														<span class="menu-link">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">Surat Masuk</span>
+															<span class="menu-arrow"></span>
 														</span>
-														<span class="menu-title">Surat Masuk</span>
-													</a>
+														<div class="menu-sub menu-sub-accordion">
+															<div class="menu-item">
+																<a class="menu-link" href="pns-tata-naskah.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">List Surat Masuk</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link" href="pns-tata-surat-disposisi-internal.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Disposisi Surat Masuk</span>
+																</a>
+															</div>
+														</div>
+													</div>
 												</div>
-												<div class="menu-item">
-													<a class="menu-link" href="#">
-														<span class="menu-bullet">
-															<span class="bullet bullet-dot"></span>
+												<div class="menu-sub menu-sub-accordion">
+													<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+														<span class="menu-link">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">Surat Keluar</span>
+															<span class="menu-arrow"></span>
 														</span>
-														<span class="menu-title">Surat Keluar</span>
-													</a>
+														<div class="menu-sub menu-sub-accordion">
+															<div class="menu-item">
+																<a class="menu-link" href="pns-tata-naskah-surat-keluar-internal.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">List Surat Keluar</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link" href="pns-tata-surat-disposisi-surat-keluar-internal.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Disposisi Surat Keluar</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link " href="pns-tata-naskah-surat-keluar-internal-verifikator.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Verifikator Surat</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link " href="pns-tata-naskah-surat-keluar-internal-ttd.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Tanda Tangan Surat</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link " href="pns-tata-naskah-surat-keluar-internal-tembusan.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Tembusan Surat</span>
+																</a>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="menu-sub menu-sub-accordion">
+													<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+														<span class="menu-link">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">Surat Kwitansi</span>
+															<span class="menu-arrow"></span>
+														</span>
+														<div class="menu-sub menu-sub-accordion">
+															<div class="menu-item">
+																<a class="menu-link" href="pns-tata-naskah-surat-kwitansi-internal.html">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">List Surat Kwitansi</span>
+																</a>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+												<span class="menu-link">
+													<span class="menu-bullet">
+														<span class="bullet bullet-dot"></span>
+													</span>
+													<span class="menu-title">Surat Eksternal</span>
+													<span class="menu-arrow"></span>
+												</span>
+												<div class="menu-sub menu-sub-accordion">
+													<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+														<span class="menu-link">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">
+																List Surat Masuk
+																<span class="badge badge-danger badge-circle px-2 ms-1">5</span>
+															</span>
+															<span class="menu-arrow"></span>
+														</span>
+														<div class="menu-sub menu-sub-accordion">
+															<div class="menu-item">
+																<a class="menu-link" href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">List Surat Masuk</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link" href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Disposisi Surat Masuk</span>
+																</a>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div class="menu-sub menu-sub-accordion">
+													<div data-kt-menu-trigger="click" class="menu-item menu-accordion mb-1">
+														<span class="menu-link">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">Surat Keluar</span>
+															<span class="menu-arrow"></span>
+														</span>
+														<div class="menu-sub menu-sub-accordion">
+															<div class="menu-item">
+																<a class="menu-link" href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">List Surat Keluar</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link " href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Disposisi Surat Keluar</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link " href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Verifikator Surat</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link " href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Tanda Tangan Surat</span>
+																</a>
+															</div>
+															<div class="menu-item">
+																<a class="menu-link" href="#">
+																	<span class="menu-bullet">
+																		<span class="bullet bullet-dot"></span>
+																	</span>
+																	<span class="menu-title">Tembusan Surat</span>
+																</a>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="menu-item">
+												<a class="menu-link" href="#">
+													<span class="menu-bullet">
+														<span class="bullet bullet-dot"></span>
+													</span>
+													<span class="menu-title">Penomoran Surat</span>
+												</a>
+											</div>
+											<div class="menu-item">
+												<a class="menu-link" href="#">
+													<span class="menu-bullet">
+														<span class="bullet bullet-dot"></span>
+													</span>
+													<span class="menu-title">Tanda Tangan Surat</span>
+												</a>
+											</div>
+											<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
+												<span class="menu-link">
+													<span class="menu-bullet">
+														<span class="bullet bullet-dot"></span>
+													</span>
+													<span class="menu-title">Monitoring Surat</span>
+													<span class="menu-arrow"></span>
+												</span>
+												<div class="menu-sub menu-sub-accordion">
+													<div class="menu-item">
+														<a class="menu-link" href="#">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">Surat Masuk</span>
+														</a>
+													</div>
+													<div class="menu-item">
+														<a class="menu-link" href="#">
+															<span class="menu-bullet">
+																<span class="bullet bullet-dot"></span>
+															</span>
+															<span class="menu-title">Surat Keluar</span>
+														</a>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -673,7 +897,7 @@
 										<!--begin::Input group-->
 										<div class="row mb-6 align-items-center">
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Perihal Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -683,8 +907,8 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
-												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Penerimaan Surat</label>
+											<div class="col-6 col-xxl-2">
+												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Terima Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
 													<input type="date" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
@@ -693,7 +917,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Pengirim</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -703,7 +927,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
+											<div class="col-6 col-xxl-2">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Penerimaan</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
