--- a/pns-tata-naskah-monitoring-masuk.html
+++ b/pns-tata-naskah-monitoring-masuk.html
@@ -308,6 +308,14 @@
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
+												<span class="menu-title">Penomoran Surat</span>
+											</a>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link" href="#">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
 												<span class="menu-title">Tanda Tangan Surat</span>
 											</a>
 										</div>
@@ -321,7 +329,7 @@
 											</span>
 											<div class="menu-sub menu-sub-accordion">
 												<div class="menu-item">
-													<a class="menu-link" href="pns-tata-naskah-monitoring-masuk.html">
+													<a class="menu-link" href="#">
 														<span class="menu-bullet">
 															<span class="bullet bullet-dot"></span>
 														</span>
@@ -329,7 +337,7 @@
 													</a>
 												</div>
 												<div class="menu-item">
-													<a class="menu-link" href="pns-tata-naskah-monitoring-keluar.html">
+													<a class="menu-link" href="#">
 														<span class="menu-bullet">
 															<span class="bullet bullet-dot"></span>
 														</span>
