--- a/pns-tata-naskah-surat-kwitansi-internal.html
+++ b/pns-tata-naskah-surat-kwitansi-internal.html
@@ -198,7 +198,7 @@
 													</span>
 													<div class="menu-sub menu-sub-accordion">
 														<div class="menu-item">
-															<a class="menu-link" href="#">
+															<a class="menu-link" href="pns-tata-naskah-surat-kwitansi-internal.html">
 																<span class="menu-bullet">
 																	<span class="bullet bullet-dot"></span>
 																</span>
@@ -302,6 +302,14 @@
 													</div>
 												</div>
 											</div>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link" href="#">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+												<span class="menu-title">Penomoran Surat</span>
+											</a>
 										</div>
 										<div class="menu-item">
 											<a class="menu-link" href="#">
@@ -673,7 +681,7 @@
 										<!--begin::Input group-->
 										<div class="row mb-6 align-items-center">
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Perihal Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -683,7 +691,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
+											<div class="col-6 col-xxl-2">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">No. Register</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -693,11 +701,11 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Terima Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
-													<input type="text" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
+													<input type="text" class="form-control form-control-solid" placeholder="Tgl. Terima Surat" />
 												</div>
 												<!--end::Input group-->
 											</div>
