--- a/pns-tata-surat-disposisi-internal.html
+++ b/pns-tata-surat-disposisi-internal.html
@@ -308,6 +308,14 @@
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
+												<span class="menu-title">Penomoran Surat</span>
+											</a>
+										</div>
+										<div class="menu-item">
+											<a class="menu-link" href="#">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
 												<span class="menu-title">Tanda Tangan Surat</span>
 											</a>
 										</div>
@@ -673,7 +681,7 @@
 										<!--begin::Input group-->
 										<div class="row mb-6 align-items-center">
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Perihal Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -683,17 +691,17 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
-												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Penerimaan Surat</label>
+											<div class="col-6 col-xxl-2">
+												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Tgl. Terima Surat</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
-													<input type="date" class="form-control form-control-solid" placeholder="Tgl. Penerimaan Surat" />
+													<input type="date" class="form-control form-control-solid" placeholder="Tgl. Terima Surat" />
 												</div>
 												<!--end::Input group-->
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-3">
+											<div class="col-6 col-xxl-3">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Pengirim</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
@@ -703,7 +711,7 @@
 											</div>
 											<!--end::Col-->
 											<!--begin::Col-->
-											<div class="col-12 col-md-2">
+											<div class="col-6 col-xxl-2">
 												<label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Penerimaan</label>
 												<!--begin::Input group-->
 												<div class="mb-5 border border-primary border-dashed rounded">
