--- a/profil.html
+++ b/profil.html
@@ -805,7 +805,7 @@
 												<!--begin::Card header-->
 												<div class="card-header cursor-pointer justify-content-end">
 													<!--begin::Action-->
-													<a href="#TabIdentitas" data-bs-toggle="tab"
+													<a href="#TabAkun" data-bs-toggle="tab"
 														class="btn btn-primary align-self-center">Pengaturan Akun</a>
 													<!--end::Action-->
 												</div>
