--- a/pns-tata-naskah-detail-tanda-tangan-file.html
+++ b/pns-tata-naskah-detail-tanda-tangan-file.html
@@ -51,7 +51,7 @@
 							<!--begin::Menu-->
 							<div class="menu menu-column menu-rounded fw-bold my-auto" id="#kt_aside_menu" data-kt-menu="true">
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/index.html">
+									<a class="menu-link" href="index.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -66,7 +66,7 @@
 									</a>
 								</div>
 								<div class="menu-item">
-									<a class="menu-link" href="../../demo3/dist/profil.html">
+									<a class="menu-link" href="profil.html">
 										<span class="menu-icon">
 											<!--begin::Svg Icon | path: icons/duotune/arrows/arr001.svg-->
 											<span class="svg-icon svg-icon-5">
@@ -415,12 +415,12 @@
 									<!--end::Menu separator-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/overview.html" class="menu-link px-5">My Profile</a>
+										<a href="#" class="menu-link px-5">My Profile</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/pages/projects/list.html" class="menu-link px-5">
+										<a href="#" class="menu-link px-5">
 											<span class="menu-text">My Projects</span>
 											<span class="menu-badge">
 												<span class="badge badge-light-danger badge-circle fw-bolder fs-7">3</span>
@@ -438,22 +438,22 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/referrals.html" class="menu-link px-5">Referrals</a>
+												<a href="#" class="menu-link px-5">Referrals</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/billing.html" class="menu-link px-5">Billing</a>
+												<a href="#" class="menu-link px-5">Billing</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">Payments</a>
+												<a href="#" class="menu-link px-5">Payments</a>
 											</div>
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/statements.html" class="menu-link d-flex flex-stack px-5">Statements
+												<a href="#" class="menu-link d-flex flex-stack px-5">Statements
 												<i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip" title="View your statements"></i></a>
 											</div>
 											<!--end::Menu item-->
@@ -476,7 +476,7 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/account/statements.html" class="menu-link px-5">My Statements</a>
+										<a href="#" class="menu-link px-5">My Statements</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -493,7 +493,7 @@
 										<div class="menu-sub menu-sub-dropdown w-175px py-4">
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5 active">
+												<a href="#" class="menu-link d-flex px-5 active">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/united-states.svg" alt="" />
 												</span>English</a>
@@ -501,7 +501,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
 												</span>Spanish</a>
@@ -509,7 +509,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
 												</span>German</a>
@@ -517,7 +517,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
 												</span>Japanese</a>
@@ -525,7 +525,7 @@
 											<!--end::Menu item-->
 											<!--begin::Menu item-->
 											<div class="menu-item px-3">
-												<a href="../../demo3/dist/account/settings.html" class="menu-link d-flex px-5">
+												<a href="#" class="menu-link d-flex px-5">
 												<span class="symbol symbol-20px me-4">
 													<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
 												</span>French</a>
@@ -537,12 +537,12 @@
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5 my-1">
-										<a href="../../demo3/dist/account/settings.html" class="menu-link px-5">Account Settings</a>
+										<a href="#" class="menu-link px-5">Account Settings</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu item-->
 									<div class="menu-item px-5">
-										<a href="../../demo3/dist/authentication/flows/basic/sign-in.html" class="menu-link px-5">Sign Out</a>
+										<a href="#" class="menu-link px-5">Sign Out</a>
 									</div>
 									<!--end::Menu item-->
 									<!--begin::Menu separator-->
@@ -552,7 +552,7 @@
 									<div class="menu-item px-5">
 										<div class="menu-content px-5">
 											<label class="form-check form-switch form-check-custom form-check-solid pulse pulse-success" for="kt_user_menu_dark_mode_toggle">
-												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="../../demo3/dist/index.html" />
+												<input class="form-check-input w-30px h-20px" type="checkbox" value="1" name="mode" id="kt_user_menu_dark_mode_toggle" data-kt-url="index.html" />
 												<span class="pulse-ring ms-n1"></span>
 												<span class="form-check-label text-gray-600 fs-7">Dark Mode</span>
 											</label>
@@ -586,7 +586,7 @@
 								<!--begin::Breadcrumb-->
 								<ul class="breadcrumb breadcrumb-dot fw-bold fs-base my-1">
 									<li class="breadcrumb-item text-muted">
-										<a href="../../demo3/dist/index.html" class="text-muted">Dashboard</a>
+										<a href="index.html" class="text-muted">Dashboard</a>
 									</li>
 									<li class="breadcrumb-item text-muted">Tata Naskah Surat</li>
 								</ul>
@@ -608,7 +608,7 @@
 								</div>
 								<!--end::Aside mobile toggle-->
 								<!--begin::Logo-->
-								<a href="../../demo3/dist/index.html" class="d-flex align-items-center">
+								<a href="index.html" class="d-flex align-items-center">
 									<img alt="Logo" src="assets/media/logos/logo-demo3-default.svg" class="h-20px" />
 								</a>
 								<!--end::Logo-->
@@ -617,12 +617,12 @@
 							<!--begin::Topbar-->
 							<div class="d-flex align-items-center flex-shrink-0">
 								<!--begin::Search-->
-								<a href="../../demo3/dist/index.html" type="button" class="btn btn-light-primary px-6 h-40px"><i class="fa fa-arrow-left"></i> Kembali</a>
+								<a href="index.html" type="button" class="btn btn-light-primary px-6 h-40px"><i class="fa fa-arrow-left"></i> Kembali</a>
 								<!--end::Search-->
 								<!--begin::Activities-->
 								<div class="d-flex align-items-center ms-3 ms-lg-4">
 									<!--begin::Drawer toggle-->
-									<a href="../../demo3/dist/pns-helpdesk.html" class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-outline-secondary w-40px h-40px">
+									<a href="pns-helpdesk.html" class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-outline-secondary w-40px h-40px">
 										<!--begin::Svg Icon | path: icons/duotune/general/gen007.svg-->
 										<span class="svg-icon svg-icon-1">
 											<i class="fa fa-headphones"></i>
@@ -685,18 +685,35 @@
 									<div class="card bgi-no-repeat card-xl-stretch bg-tambahan mb-5" style="background-position: right top; background-size: 30% auto; background-image: url(assets/media/svg/shapes/abstract-1.svg)">
 										<!--begin::Body-->
 										<div class="card-body">
-											<ul class="list-unstyled">
-												<li class="fw-bolder">Perihal :</li>
-												<li class="fs-3">SURAT TUGAS MONITORING INTERNET DESA FERDY MEIROFA, EDI SUPRAYITNO DAN ARISCATUR</li>
-												<li class="fw-bolder mt-2">No. Surat :</li>
-												<li>094/199/D.KISP/III/2023</li>
-												<li class="fw-bolder mt-2">Sifat :</li>
-												<li>Biasa</li>
-												<li class="fw-bolder mt-2">Ringkasan :</li>
-												<li>-</li>
-												<li class="fw-bolder mt-2">Catatan</li>
-												<li>-</li>
-											</ul>
+											<h5 class="fw-bold">
+												SURAT TUGAS MONITORING INTERNET DESA FERDY MEIROFA, EDI SUPRAYITNO DAN ARISCATUR
+											</h5>
+											<div class="row mb-5">
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>No. Surat :</h6>
+														<span class="ms-2">094/199/D.KISP/III/2023</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Sifat :</h6>
+														<span class="ms-2">Biasa</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Pengirim :</h6>
+														<span class="ms-2">Tri Sutomo</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Penerima :</h6>
+														<span class="ms-2">Ariscatur Pratomo, Ferdy Meirofa Eka Saputra ...(+1)</span>
+													</div>
+												</div>
+											</div>
 										</div>
 										<!--end::Body-->
 									</div>
@@ -711,73 +728,28 @@
 										<i class="fa fa-info-circle fs-2 text-white mx-8"></i>
 										Dokumen dibawah ini hanya versi preview (pratinjau), untuk melihat dokumen asli silahkan download surat ini.
 									</span>
-									<object type="application/pdf" data="../../demo3/dist/assets/files/surat20230810012350YTA5NWRL_(signed).pdf" height="650px" width="100%"></object>
+									<object type="application/pdf" data="assets/files/surat20230810012350YTA5NWRL_(signed).pdf" height="650px" width="100%"></object>
 								</div>
 								<div class="col-12 col-md-4">
 									<!--begin::Card-->
 									<div class="card card-flush mb-0">
-										<!--begin::Card header-->
-										<div class="card-header">
-											<!--begin::Card title-->
-											<div class="card-title">
-												<h2 class="badge badge-success ">Sudah dibaca</h2>
-											</div>
-											<!--end::Card title-->
-
-										</div>
-										<!--end::Card header-->
 										<!--begin::Card body-->
 										<div class="card-body pt-0 fs-6">
-											<!--begin::Section-->
-											<div class="mb-7">
-												<!--begin::Details-->
-												<div class="d-flex align-items-center">
-													<!--begin::Info-->
-													<div class="d-flex flex-column">
-														<!--begin::Name-->
-														<a href="#" class="fs-4 fw-bolder text-gray-900 text-hover-primary me-2">Pengirim :</a>
-														<!--end::Name-->
-														<!--begin::Email-->
-														<a href="#" class="fw-bold text-gray-600 text-hover-primary">TRI SUTOMO</a>
-														<a href="#" class="fw-bold text-gray-600 text-hover-primary"><i class="fa fa-calendar-alt me-2"></i> 28 JULI 2023</a>
-														<!--end::Email-->
-													</div>
-													<!--end::Info-->
-												</div>
-												<!--end::Details-->
-											</div>
-											<!--end::Section-->
-											<!--begin::Seperator-->
-											<div class="separator separator-dashed mb-7"></div>
-											<!--end::Seperator-->
-											<!--begin::Section-->
-											<div class="mb-7">
-												<!--begin::Name-->
-												<a href="#" class="fs-4 fw-bolder text-gray-900 text-hover-primary me-2">Penerima :</a><br>
-												<a href="#" class="fw-bold text-gray-600 text-hover-primary">ARISCATUR PRATOMO</a><br>
-												<a href="#" class="fw-bold text-gray-600 text-hover-primary"><i class="fa fa-calendar-alt me-2"></i> 28 JULI 2023</a>
-												<!--end::Email-->
-											</div>
-											<!--end::Section-->
-										
-											<!--begin::Seperator-->
-											<div class="separator separator-dashed mb-7"></div>
-											<!--end::Seperator-->
 											<!--begin::Header-->
 											<div class="card-header align-items-center border-0 mt-4">
 												<h3 class="card-title align-items-start flex-column">
-													<span class="fw-bolder mb-2 text-dark">Log Surat</span>
+													<span class="fw-bolder mb-2 text-dark">Monitoring Surat</span>
 												</h3>
 											</div>
 											<!--end::Header-->
 											<!--begin::Body-->
-											<div class="card-body py-5">
+											<div class="card-body overflow-scroll py-5">
 												<!--begin::Timeline-->
 												<div class="timeline-label mb-15">
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">28/07/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -785,14 +757,17 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Text-->
-														<div class="fw-mormal timeline-content text-muted ps-3">Dibuat / Dikirim TRI SUTOMO</div>
+														<div class="fw-mormal timeline-content text-muted ps-3">
+															<span>Dibuat / Dikirim TRI SUTOMO</span> <br>
+															<span class="badge badge-success">10/08/2023</span>
+														</div>
 														<!--end::Text-->
 													</div>
 													<!--end::Item-->
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">10/08/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -800,9 +775,11 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Content-->
-														<div class="timeline-content d-flex">
-															<span class="fw-bolder text-gray-800 ps-3">Didistribusikan
+														<div class="w-mormal timeline-content text-muted ps-3">
+															<span class="fw-bolder text-gray-800">Didistribusikan
 																TRI SUTOMO - Pranata Komputer Ahli Pertama</span>
+																<br>
+																<span class="badge badge-success">10/08/2023</span>
 														</div>
 														<!--end::Content-->
 														
@@ -811,7 +788,7 @@
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">16/08/2023</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
@@ -819,15 +796,18 @@
 														</div>
 														<!--end::Badge-->
 														<!--begin::Desc-->
-														<div class="timeline-content fw-bolder text-gray-800 ps-3"><span class="text-primary">Dibaca</span> 
-															ARISCATUR PRATOMO - Pranata Komputer / Sub Koordinator Tata Kelola Aplikasi Informatika</div>
+														<div class="timeline-content fw-bolder text-gray-800 ps-3">
+															<span class="text-primary">Dibaca</span> <br>
+															<span>ARISCATUR PRATOMO - Pranata Komputer / Sub Koordinator Tata Kelola Aplikasi Informatika</span> <br>
+															<span class="badge badge-success">10/08/2023</span>
+														</div>
 														<!--end::Desc-->
 													</div>
 													<!--end::Item-->
 													<!--begin::Item-->
 													<div class="timeline-item">
 														<!--begin::Label-->
-														<div class="timeline-label fw-bolder text-gray-800 fs-6">-</div>
+														<div class="timeline-label fw-bolder text-gray-800 fs-6"></div>
 														<!--end::Label-->
 														<!--begin::Badge-->
 														<div class="timeline-badge">
