--- a/profil.html
+++ b/profil.html
@@ -770,6 +770,12 @@
 										<!--begin::Nav item-->
 										<li class="nav-item">
 											<a class="nav-link text-active-primary me-6" data-bs-toggle="tab"
+												href="#TabRiwayat">RiwayatJabatan</a>
+										</li>
+										<!--end::Nav item-->
+										<!--begin::Nav item-->
+										<li class="nav-item">
+											<a class="nav-link text-active-primary me-6" data-bs-toggle="tab"
 												href="#TabAkun">Akun</a>
 										</li>
 										<!--end::Nav item-->
@@ -2054,6 +2060,117 @@
 								</div>
 
 								<!-- TAB#03 -->
+								<div class="tab-pane fade" id="TabRiwayat">
+									<!--begin::Basic info-->
+									<div class="card mb-5 mb-xl-10">
+										<!--begin::Card header-->
+										<div class="card-header border-0 cursor-pointer" role="button"
+											data-bs-toggle="collapse" data-bs-target="#kt_account_profile_details"
+											aria-expanded="true" aria-controls="kt_account_profile_details">
+											<!--begin::Card title-->
+											<div class="card-title m-0">
+												<h3 class="fw-bolder m-0">Data Atasan Langsung</h3>
+											</div>
+											<!--end::Card title-->
+										</div>
+										<!--begin::Card header-->
+										<!--begin::Content-->
+										<div id="kt_account_profile_details" class="collapse show">
+											<!--begin::Form-->
+											<form id="kt_account_profile_details_form" class="form">
+												<!--begin::Card body-->
+												<div class="card-body border-top p-9">
+													<!--end::Input group-->
+													<!--begin::Input group-->
+													<div class="row mb-6">
+														<!--begin::Label-->
+														<label class="col-lg-4 col-form-label fw-bold fs-6">
+															<span class="required">Perangkat Daerah</span>
+															<i class="fas fa-exclamation-circle ms-1 fs-7"
+																data-bs-toggle="tooltip"
+																title="Country of origination"></i>
+														</label>
+														<!--end::Label-->
+														<!--begin::Col-->
+														<div class="col-lg-8 fv-row">
+															<select name="country" aria-label="Select a Country"
+																data-control="select2" data-placeholder="Unit Kerja"
+																class="form-select form-select-solid form-select-lg fw-bold">
+																<option value="">Select a Country...</option>
+																<option data-kt-flag="flags/afghanistan.svg" value="AF">
+																	Afghanistan</option>
+																<option data-kt-flag="flags/aland-islands.svg"
+																	value="AX">Aland Islands</option>
+																<option data-kt-flag="flags/albania.svg" value="AL">
+																	Albania</option>
+																<option data-kt-flag="flags/algeria.svg" value="DZ">
+																	Algeria</option>
+																<option data-kt-flag="flags/american-samoa.svg"
+																	value="AS">American Samoa</option>
+																<option data-kt-flag="flags/andorra.svg" value="AD">
+																	Andorra</option>
+																<option data-kt-flag="flags/angola.svg" value="AO">
+																	Angola</option>
+																<option data-kt-flag="flags/anguilla.svg" value="AI">
+																	Anguilla</option>
+															</select>
+														</div>
+														<!--end::Col-->
+													</div>
+													<!--end::Input group-->
+													<!--end::Input group-->
+													<!--begin::Input group-->
+													<div class="row mb-6">
+														<!--begin::Label-->
+														<label class="col-lg-4 col-form-label fw-bold fs-6">
+															<span class="required">Atasan Langsung</span>
+															<i class="fas fa-exclamation-circle ms-1 fs-7"
+																data-bs-toggle="tooltip"
+																title="Country of origination"></i>
+														</label>
+														<!--end::Label-->
+														<!--begin::Col-->
+														<div class="col-lg-8 fv-row">
+															<select name="country" aria-label="Select a Country"
+																data-control="select2" data-placeholder="Unit Kerja"
+																class="form-select form-select-solid form-select-lg fw-bold">
+																<option value="">Select a Country...</option>
+																<option data-kt-flag="flags/afghanistan.svg" value="AF">
+																	Afghanistan</option>
+																<option data-kt-flag="flags/aland-islands.svg"
+																	value="AX">Aland Islands</option>
+																<option data-kt-flag="flags/albania.svg" value="AL">
+																	Albania</option>
+																<option data-kt-flag="flags/algeria.svg" value="DZ">
+																	Algeria</option>
+																<option data-kt-flag="flags/american-samoa.svg"
+																	value="AS">American Samoa</option>
+																<option data-kt-flag="flags/andorra.svg" value="AD">
+																	Andorra</option>
+																<option data-kt-flag="flags/angola.svg" value="AO">
+																	Angola</option>
+																<option data-kt-flag="flags/anguilla.svg" value="AI">
+																	Anguilla</option>
+															</select>
+														</div>
+														<!--end::Col-->
+													</div>
+													<!--end::Input group-->
+												</div>
+																								<!--begin::Actions-->
+																								<div class="card-footer d-flex justify-content-end py-6 px-9">
+																									<button type="reset"
+																										class="btn btn-light btn-active-light-primary me-2">Batal</button>
+																									<button type="submit" class="btn btn-primary"
+																										id="kt_account_profile_details_submit">Simpan Perubahan</button>
+																								</div>
+																								<!--end::Actions-->
+											</form>
+										</div>
+									</div>
+								</div>
+
+								<!-- TAB#04 -->
 								<div class="tab-pane fade" id="TabAkun">
 									<!--begin::Basic info-->
 									<div class="card mb-5 mb-xl-10">
@@ -2130,7 +2247,7 @@
 									</div>
 								</div>
 
-								<!-- TAB#04 -->
+								<!-- TAB#05 -->
 								<div class="tab-pane fade" id="TabAtasan">
 									<!--begin::Basic info-->
 									<div class="card mb-5 mb-xl-10">
@@ -2239,10 +2356,9 @@
 											</form>
 										</div>
 									</div>
-
 								</div>
 
-								<!-- TAB#05 -->
+								<!-- TAB#06 -->
 								<div class="tab-pane fade" id="TabCapaian">
 									<!--begin::Row-->
 									<div class="row g-5 g-xl-8">
