update detail surat
update detail surat

--- a/pns-tata-naskah-detail-surat-disposisi-internal.html
+++ b/pns-tata-naskah-detail-surat-disposisi-internal.html
@@ -684,21 +684,38 @@
 											background-color: #CEE6F3;
 										}
 									</style>
-									<div class="card bgi-no-repeat card-xl-stretch bg-tambahan mb-5" style="background-position: right top; background-size: 30% auto; background-image: url(assets/media/svg/shapes/abstract-1.svg)">
+									<div class="card bgi-no-repeat card-xl-stretch bg-tambahan mb-3" style="background-position: right top; background-size: 30% auto; background-image: url(assets/media/svg/shapes/abstract-1.svg)">
 										<!--begin::Body-->
 										<div class="card-body">
-											<ul class="list-unstyled">
-												<li class="fw-bolder">Perihal :</li>
-												<li class="fs-3">SURAT TUGAS MONITORING INTERNET DESA FERDY MEIROFA, EDI SUPRAYITNO DAN ARISCATUR</li>
-												<li class="fw-bolder mt-2">No. Surat :</li>
-												<li>094/199/D.KISP/III/2023</li>
-												<li class="fw-bolder mt-2">Sifat :</li>
-												<li>Biasa</li>
-												<li class="fw-bolder mt-2">Ringkasan :</li>
-												<li>-</li>
-												<li class="fw-bolder mt-2">Catatan</li>
-												<li>-</li>
-											</ul>
+											<h5 class="fw-bold mb-5">
+												SURAT REKOMENDASI PERMOHONAN PENERBITAN SERTIFIKAT ELEKTRONIK OSD LEMSANEG LILIMULYATI
+											</h5>
+											<div class="row mb-5">
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>No. Surat :</h6>
+														<span class="ms-2">094/199/D.KISP/III/2023</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Jenis Surat :</h6>
+														<span class="ms-2">SURAT BIASA ( BUPATI)</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>No. Reg. Sistem :</h6>
+														<span class="ms-2">MGQ5MJEX</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Sifat :</h6>
+														<span class="ms-2">Penting</span>
+													</div>
+												</div>
+											</div>
 										</div>
 										<!--end::Body-->
 									</div>
