--- a/pns-tata-naskah-detail-surat-masuk-internal.html
+++ b/pns-tata-naskah-detail-surat-masuk-internal.html
@@ -685,7 +685,7 @@
 									<div class="card bgi-no-repeat card-xl-stretch bg-tambahan mb-5" style="background-position: right top; background-size: 30% auto; background-image: url(assets/media/svg/shapes/abstract-1.svg)">
 										<!--begin::Body-->
 										<div class="card-body">
-											<h5 class="fw-bold">
+											<h5 class="fw-bold mb-5">
 												SURAT TUGAS MONITORING INTERNET DESA FERDY MEIROFA, EDI SUPRAYITNO DAN ARISCATUR
 											</h5>
 											<div class="row mb-5">
@@ -710,7 +710,10 @@
 												<div class="col-12 col-xxl-6">
 													<div class="d-flex flex-wrap">
 														<h6>Penerima :</h6>
-														<span class="ms-2">Ariscatur Pratomo, Ferdy Meirofa Eka Saputra ...(+1)</span>
+														<span class="ms-2">Ariscatur Pratomo,
+															<button type="button" class="badge badge-danger badge-square ms-1 px-3" data-bs-toggle="tooltip" data-bs-html="true" title="1. Ariscatur <br> 2. Ferdy Meirofa Eka Saputra <br> 3. Ferdian Riza Yudha">
+																3 Lainnya</span>
+														</span>
 													</div>
 												</div>
 											</div>
