--- a/pns-tata-naskah-detail-surat-internal-verifikator.html
+++ b/pns-tata-naskah-detail-surat-internal-verifikator.html
@@ -684,26 +684,41 @@
 											background-color: #CEE6F3;
 										}
 									</style>
-									<div class="card bgi-no-repeat card-xl-stretch bg-tambahan mb-5" style="background-position: right top; background-size: 30% auto; background-image: url(assets/media/svg/shapes/abstract-1.svg)">
+									<div class="card bgi-no-repeat card-xl-stretch bg-tambahan mb-3" style="background-position: right top; background-size: 30% auto; background-image: url(assets/media/svg/shapes/abstract-1.svg)">
 										<!--begin::Body-->
 										<div class="card-body">
-											<ul class="list-unstyled">
-												<li class="fw-bolder">Jenis Surat</li>
-												<li class="fs-3">SURAT BIASA ( BUPATI)
-												</li>
-												<li class="fw-bolder mt-2">No. Surat :</li>
-												<li>094/168/DKISP/I/2022</li>
-												<li class="fw-bolder mt-2">Perihal :</li>
-												<li>SURAT REKOMENDASI PERMOHONAN PENERBITAN SERTIFIKAT ELEKTRONIK OSD LEMSANEG LILIMULYATI</li>
-												<li class="fw-bolder mt-2">No. Reg. Sistem :</li>
-												<li>MGQ5MJEX</li>
-												<li class="fw-bolder mt-2">Sifat :</li>
-												<li>Penting</li>
-											</ul>
+											<h5 class="fw-bold mb-5">
+												SURAT REKOMENDASI PERMOHONAN PENERBITAN SERTIFIKAT ELEKTRONIK OSD LEMSANEG LILIMULYATI
+											</h5>
+											<div class="row mb-5">
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>No. Surat :</h6>
+														<span class="ms-2">094/199/D.KISP/III/2023</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Jenis Surat :</h6>
+														<span class="ms-2">SURAT BIASA ( BUPATI)</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>No. Reg. Sistem :</h6>
+														<span class="ms-2">MGQ5MJEX</span>
+													</div>
+												</div>
+												<div class="col-12 col-xxl-6">
+													<div class="d-flex flex-wrap">
+														<h6>Sifat :</h6>
+														<span class="ms-2">Penting</span>
+													</div>
+												</div>
+											</div>
 										</div>
 										<!--end::Body-->
 									</div>
-									<!--end::Statistics Widget 1-->
 								</div>
 							</div>
 							<!--end::Row-->
@@ -771,17 +786,22 @@
 											</div>
 											<!--end::Section-->
 											<!--begin::Seperator-->
-											<div class="separator separator-dashed mb-7"></div>
+											<div class="separator separator-dashed mb-3"></div>
 											<!--end::Seperator-->
 											<!--begin::Section-->
-											<div class="mb-7">
+											<div>
 												<!--begin::Name-->
 												<a href="#" class="fs-4 fw-bolder text-gray-900 text-hover-primary me-2">Penerima Surat :</a><br>
-												<a href="#" class="fw-bold text-gray-600 text-hover-primary">ARISCATUR PRATOMO</a><br>
-												<a href="#" class="fw-bold text-gray-600 text-hover-primary"><i class="fa fa-calendar-alt me-2"></i> 28 JULI 2023</a>
+												<a href="#" class="fw-bold text-gray-600 text-hover-primary">ARISCATUR PRATOMO </a>
+												<button type="button" class="badge badge-danger text-white badge-square ms-1 px-3" data-bs-toggle="tooltip" data-bs-html="true" title="1. Ariscatur <br> 2. Ferdy Meirofa Eka Saputra <br> 3. Ferdian Riza Yudha">
+													3 lainnya</span>
 												<!--end::Email-->
 											</div>
+											<div class="mb-7">
+												<a href="#" class="fw-bold text-gray-600 text-hover-primary"><i class="fa fa-calendar-alt me-2"></i> 28 JULI 2023</a>
+											</div>
 											<!--end::Section-->
+											<div class="separator separator-dashed mb-7"></div>
 											<!--begin::Actions-->
 											<div class="mb-0 text-center justify-content-center">
 												<a href="#" class="btn btn-primary" id="kt_subscriptions_create_button"><i class="fa fa-file-download me2"></i> Download Surat Selesai TTD</a>
