--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
 												</span>
 												<div class="d-flex flex-column text-end">
 													<span class="text-white fw-bolder fs-2">1408</span>
-													<span class="text-white fw-bold mt-1">Jumlah Belum Absen Pulang <br> Hari Ini</span>
+													<span class="text-white fw-bold mt-1">Jumlah Tidak Absen  <br> Pulang Bulan Ini</span>
 												</div>
 											</div>
 										</div>
