update introjs, absensi
update introjs, absensi

--- a/pns-absensi.html
+++ b/pns-absensi.html
@@ -458,7 +458,7 @@
 						<!--begin::Container-->
 						<div class="container-xxl" id="kt_content_container">
 							<!--begin::Row-->
-							<div class="row align-items-center">
+							<div class="row align-items-center mb-4">
 								<div class="col-12 col-md-4 mb-3">
 									<label for="exampleFormControlInput1" class="form-label">Bulan</label>
 									<select name="country" aria-label="Select a Country"
@@ -492,10 +492,11 @@
 									<a href="#" class="btn btn-primary px-6 align-self-center text-nowrap">Filter Pencarian</a>
 								</div>
 							<!--begin::Row-->
+							</div>
 
-							<div class="row mt-10 mb-5">
+							<div class="row mx-0 py-0 bg-light border border-2 border-white shadow p-5 rounded">
 								<div class="col-12 col-md-6 col-xxl-3">
-									<div class="d-flex align-items-center">
+									<div class="d-flex align-items-center p-3">
 										<!--begin::Symbol-->
 										<div class="symbol symbol-45px w-40px me-5">
 											<span class="symbol-label bg-lighten">
@@ -540,7 +541,7 @@
 								<!--end::Item-->
 								<!--begin::Item-->
 								<div class="col-12 col-md-6 col-xxl-3">
-									<div class="d-flex align-items-center">
+									<div class="d-flex align-items-center p-3">
 										<!--begin::Symbol-->
 										<div class="symbol symbol-45px w-40px me-5">
 											<span class="symbol-label bg-lighten">
@@ -589,7 +590,7 @@
 								<!--end::Item-->
 								<!--begin::Item-->
 								<div class="col-12 col-md-6 col-xxl-3">
-									<div class="d-flex align-items-center">
+									<div class="d-flex align-items-centerr p-3">
 										<!--begin::Symbol-->
 										<div class="symbol symbol-45px w-40px me-5">
 											<span class="symbol-label bg-lighten">
@@ -634,7 +635,7 @@
 								<!--end::Item-->
 								<!--begin::Item-->
 								<div class="col-12 col-md-6 col-xxl-3">
-									<div class="d-flex align-items-center">
+									<div class="d-flex align-items-centerr p-3">
 										<!--begin::Symbol-->
 										<div class="symbol symbol-45px w-40px me-5">
 											<span class="symbol-label bg-lighten">
@@ -708,7 +709,7 @@
 							<!--end::Documents toolbar-->
 
 							<!--begin::Row-->
-							<div class="row m-0">
+							<div class="row m-0 p-0">
 								<div class="card">
 									<div class="card-body">
 										<div class="table-responsive">
